minor fix: home div not centered in mobile. Some existing behaviour apparently. 100vh will not work proper in mobile and act like the top search bar doesn't exist. So have to make html element 100% height and then do whatever.

--- a/src/views/home/home.styles.css
+++ b/src/views/home/home.styles.css
@@ -1,10 +1,15 @@
 @import "../../App.css";
 
+
+html, body, #root {
+    height: 100%;
+}
+
 .home {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     overflow: hidden;
 }
